--- a/TrafficLights/Base.lproj/Main.storyboard
+++ b/TrafficLights/Base.lproj/Main.storyboard
@@ -1,24 +1,98 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TrafficLights" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vMa-Go-tZW">
+                                <rect key="frame" x="132" y="112" width="111" height="111"/>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="111" id="0ck-Xh-8AK"/>
+                                    <constraint firstAttribute="height" constant="111" id="xSv-5E-Qq3"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tFe-la-mBI">
+                                <rect key="frame" x="132" y="231" width="111" height="111"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Tx-bn-Nlr">
+                                <rect key="frame" x="132" y="350" width="111" height="111"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xDe-Lf-2Yq">
+                                <rect key="frame" x="110.66666666666669" y="675" width="154" height="54"/>
+                                <color key="backgroundColor" name="AccentColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="154" id="jPG-rk-yBd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="START">
+                                    <color key="titleColor" systemColor="labelColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="startButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="wjV-zC-cxH"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="labelColor"/>
+                        <constraints>
+                            <constraint firstItem="2Tx-bn-Nlr" firstAttribute="top" secondItem="tFe-la-mBI" secondAttribute="bottom" constant="8" symbolic="YES" id="0zk-c5-46p"/>
+                            <constraint firstItem="xDe-Lf-2Yq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7za-2P-iBJ"/>
+                            <constraint firstItem="vMa-Go-tZW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="68" id="G39-mc-Jsd"/>
+                            <constraint firstItem="tFe-la-mBI" firstAttribute="height" secondItem="2Tx-bn-Nlr" secondAttribute="height" id="HDQ-v2-gPW"/>
+                            <constraint firstItem="tFe-la-mBI" firstAttribute="width" secondItem="2Tx-bn-Nlr" secondAttribute="width" id="Xwb-pF-GQo"/>
+                            <constraint firstItem="vMa-Go-tZW" firstAttribute="width" secondItem="tFe-la-mBI" secondAttribute="width" id="bKF-M3-jUI"/>
+                            <constraint firstItem="vMa-Go-tZW" firstAttribute="height" secondItem="tFe-la-mBI" secondAttribute="height" id="fh1-Nx-Iuf"/>
+                            <constraint firstItem="tFe-la-mBI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jqo-YE-P7K"/>
+                            <constraint firstItem="tFe-la-mBI" firstAttribute="top" secondItem="vMa-Go-tZW" secondAttribute="bottom" constant="8" symbolic="YES" id="kWO-Fi-isO"/>
+                            <constraint firstItem="2Tx-bn-Nlr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pAO-Bv-Cw2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xDe-Lf-2Yq" secondAttribute="bottom" constant="49" id="wUp-4n-LhD"/>
+                            <constraint firstItem="vMa-Go-tZW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="y43-Ta-vPd"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="greenLightsView" destination="2Tx-bn-Nlr" id="gty-fh-Uo3"/>
+                        <outlet property="redLightsView" destination="vMa-Go-tZW" id="w2Q-gj-Ccb"/>
+                        <outlet property="startButton" destination="xDe-Lf-2Yq" id="zNF-xa-LbQ"/>
+                        <outlet property="yellowLightsView" destination="tFe-la-mBI" id="WLv-mV-ZJo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-23.188405797101453" y="51.5625"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
